--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
        <body>
            <hl>John Kraft's CSCE 190 site</hl>
 
+           <!-- Problem Statement -->
            <section class="assignment">
             <a href="files/Problem-Stateement.pdf"><img src="images/Problem-Stateement.png"></a>
             <section class="ass-details">
-                <h2>Problem Statement: Parking</h2>
+                <a href="files/Problem-Stateement.pdf"><h2>Problem Statement: Parking</h2></a>
                 <p>
                     It is far too difficult to find parking spots in a city because of the density of the population. We want to find a way to let people know where there are open spots and how much those spots cost.
                 </p>
-                <a href="files/Problem-Stateement.pdf">Problem Statement pdf</a>
-            </section>
+        </section>
+
+        <!-- Affinity Diagram -->
+        <section class="assignment">
+            <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
+            <section class="ass-details">
+                <a href="files/affinity-diagram.pdf"><h2>Problem Statement: Parking</h2></a>
+                <p>
+                    A visual representation of the ideas for my group's problem statement.
+               </p>
         </section>
     </body>
 </html>
