--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="assignment">
             <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
             <section class="ass-details">
-                <a href="files/affinity-diagram.pdf"><h2>Problem Statement: Parking</h2></a>
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Parking</h2></a>
                 <p>
                     A visual representation of the ideas for my group's problem statement.
                </p>
